Car management/force-app/main/default/objects/Pojazd__c/Pojazd__c.object-meta.xml
<CustomObject>
    <label>Pojazd</label>
    <nameField>
        <label>Numer Pojazdu</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pojazdy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>