Car management/force-app/main/default/objects/Pojazd__c/fields/Cena__c.field-meta.xml
<CustomField>
    <fullName>Cena__c</fullName>
    <label>Cena</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>