Car management/force-app/main/default/objects/Pojazd__c/fields/ladownosc__c.field-meta.xml
<CustomField>
    <fullName>ladownosc__c</fullName>
    <label>Ładowność(kg)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>