Car management/force-app/main/default/objects/Pojazd__c/fields/Manager_notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_notes__c</fullName>
    <label>Manager notes</label>
    <type>TextArea</type>
</CustomField>