Car management/force-app/main/default/objects/Pojazd__c/fields/Marka__c.field-meta.xml
<CustomField>
    <fullName>Marka__c</fullName>
    <label>Marka</label>
    <length>30</length>
    <type>Text</type>
</CustomField>