Car management/force-app/main/default/objects/Pojazd__c/fields/Moc__c.field-meta.xml
<CustomField>
    <fullName>Moc__c</fullName>
    <label>Moc</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>