Car management/force-app/main/default/objects/Pojazd__c/fields/Numer_seryjny__c.field-meta.xml
<CustomField>
    <fullName>Numer_seryjny__c</fullName>
    <label>Numer seryjny</label>
    <length>17</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>