Car management/force-app/main/default/objects/Pojazd__c/fields/Rodzaj__c.field-meta.xml
<CustomField>
    <fullName>Rodzaj__c</fullName>
    <label>Rodzaj</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sportowe</fullName>
            </value>
            <value>
                <fullName>Rodzinne</fullName>
            </value>
            <value>
                <fullName>Dostawcze</fullName>
            </value>
            <value>
                <fullName>Inne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>