Car management/force-app/main/default/objects/Pojazd__c/fields/Spalanie__c.field-meta.xml
<CustomField>
    <fullName>Spalanie__c</fullName>
    <label>Spalanie</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>