Car management/force-app/main/default/objects/Pojazd__c/fields/Stan__c.field-meta.xml
<CustomField>
    <fullName>Stan__c</fullName>
    <label>Stan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nowy</fullName>
                <default>true</default>
                <label>Nowy</label>
            </value>
            <value>
                <fullName>Gotowy do sprzedaży</fullName>
            </value>
            <value>
                <fullName>Sprzedany</fullName>
            </value>
            <value>
                <fullName>W naprawie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>