Car management/force-app/main/default/objects/Pojazd__c/fields/Wyposazenie__c.field-meta.xml
<CustomField>
    <fullName>Wyposazenie__c</fullName>
    <label>Wyposażenie</label>
    <type>TextArea</type>
</CustomField>