Car management/force-app/main/default/objects/Pojazd__c/validationRules/Capacity.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity</fullName>
    <active>true</active>
    <errorConditionFormula>ladownosc__c &lt;= 0</errorConditionFormula>
    <errorMessage>Capacity cannot be less than 0</errorMessage>
</ValidationRule>