Car management/force-app/main/default/objects/Pojazd__c/validationRules/Fuel_usage.validationRule-meta.xml
<ValidationRule>
    <fullName>Fuel_usage</fullName>
    <active>true</active>
    <errorConditionFormula>Spalanie__c &lt;= 0</errorConditionFormula>
    <errorMessage>Fuel usage cannot be less than 0</errorMessage>
</ValidationRule>