Car management/force-app/main/default/objects/Pojazd__c/validationRules/Power.validationRule-meta.xml
<ValidationRule>
    <fullName>Power</fullName>
    <active>true</active>
    <errorConditionFormula>Moc__c &lt;= 0</errorConditionFormula>
    <errorMessage>The power cannot be less than 0</errorMessage>
</ValidationRule>