Car management/force-app/main/default/objects/Pojazd__c/validationRules/price.validationRule-meta.xml
<ValidationRule>
    <fullName>price</fullName>
    <active>true</active>
    <errorConditionFormula>Cena__c &lt;= 0</errorConditionFormula>
    <errorMessage>The price cannot be less than 0</errorMessage>
</ValidationRule>